<resources>
    <string name="app_name">My World Is Comics</string>

    <string name="welcome_message">Welcome to My World Is Comics, your one stop location for all things in the multiverse.\n\nClick the button bellow to travel to a character page and explore from there or browse the trending lists from the navigation drawer on the left</string>

    <!-- Section Titles -->
    <string name="sec_hub_home">Home</string>
    <string name="sec_hub_chars">Trending Characters</string>
    <string name="sec_hub_new_comics">New Comics</string>
    <string name="sec_hub_teams">Trending Teams</string>

    <string name="sec_res_bio">General Information</string>
    <string name="sec_res_desc">Full Biography</string>
    <string name="sec_res_first">First Appearance</string>

    <string name="sec_char_teams">Teams</string>

    <string name="sec_team_members">Members</string>
    <string name="sec_team_enemies">Enemies</string>
    <string name="sec_team_allies">Allies</string>

    <string name="sec_issue_creators">Creators</string>
    <string name="sec_issue_characters">Characters</string>
    <string name="sec_issue_teams">Teams</string>
    <string name="sec_issue_locations">Locations</string>
    <string name="sec_issue_concepts">Concepts</string>
    <string name="sec_issue_objects">Objects</string>
    <string name="sec_issue_story_arcs">Story Arcs</string>

    <string name="sec_vol_issues">Issues</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Menu Items -->
    <string name="action_example">Example action</string>
    <string name="menu_volume">Volume</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Labels -->
    <string name="realName">Real Name:</string>
    <string name="aliases">Aliases:</string>
    <string name="birthLabel">Date of Birth:</string>
    <string name="issueCountLabel_start">Appears in: \u0020 </string>
    <string name="issuesLabel_end"> \u0020 issues</string>
    <string name="coverDate">Cover Date:</string>
    <string name="storeDate">Store Date:</string>
    <string name="title">Title:</string>
    <string name="space"> \u0020 </string>
    <string name="volumeTotal">Volume contains:  \u0020 </string>
    <string name="startYear">Start Year:</string>


    <!-- Activities -->
    <string name="title_activity_hub">HubActivity</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_issue">IssueActivity</string>
    <string name="title_activity_generic_resource">GenericResourceActivity</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search My World Is Comics</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
</resources>
