<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   tools:context="com.tomfin46.myworldiscomics.Fragments.IssueFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_img_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="-5dp"
                    android:layout_marginTop="-5dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/abc_action_bar_default_height_material"
                    android:background="#F44336"
                    android:elevation="8dp"
                    android:inputType="text"
                    android:paddingLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material">

                    <TextView
                        android:id="@+id/volumeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="@dimen/abc_text_size_large_material" />

                    <TextView
                        android:id="@+id/spaceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/space"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="@dimen/abc_text_size_large_material"/>

                    <TextView
                        android:id="@+id/issueNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="@dimen/abc_text_size_large_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/titleLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/coverDateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coverDate"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/coverDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/storeDateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/storeDate"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/storeDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/activity_vertical_margin" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />

</RelativeLayout>
