<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tomfin46.myworldiscomics.MainActivity$PlaceholderFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/img"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_img_height"
                    android:elevation="8dp"
                    android:layout_marginBottom="-5dp"
                    android:layout_marginTop="-5dp"
                    android:clickable="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/abc_action_bar_default_height_material"
                    android:id="@+id/name"
                    android:textSize="@dimen/abc_text_size_large_material"
                    android:background="#F44336"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:elevation="8dp"
                    android:paddingLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/realName"
                        android:id="@+id/realNameLabel"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/realName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aliases"
                        android:id="@+id/aliasLabel"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aliases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthLabel"
                        android:id="@+id/birthLabel"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issueCountLabel_start"
                            android:id="@+id/issueCountLabel_start"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/issueCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issueCountLabel_end"
                            android:id="@+id/issueCountLabel_end"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/deck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <!--<android.support.v7.widget.RecyclerView
                        android:id="@+id/desc_recycler"
                        android:scrollbars="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true" />

</RelativeLayout>
